--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@antv/g6": "^4.8.23",
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
@@ -24,6 +25,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "tsparticles": "^3.0.3",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
