--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@antv/g6": "^4.8.23",
-    "axios": "0.18.1",
+    "axios": "^0.18.1",
     "core-js": "3.6.5",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
