--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "element-ui": "2.13.2",
+    "http-proxy-middleware": "^2.0.6",
     "js-cookie": "2.2.0",
     "lodash": "^4.17.21",
     "normalize.css": "7.0.0",
